# gettogether

./: .gitignore  .gitmodules  CLAUDE.md  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
.maestro/: config.yaml
.maestro/flows/ios/: 00_welcome_screen.yaml  01_create_account.yaml  02_home_navigation.yaml  03_add_contact.yaml  04_settings.yaml
androidApp/: build.gradle.kts  proguard-rules.pro
androidApp/src/androidTest/: README.md
androidApp/src/main/: AndroidManifest.xml
androidApp/src/main/cpp/: CMakeLists.txt  jami_jni_stub.cpp
androidApp/src/main/java/net/jami/daemon/: ConversationCallback.java  JamiServiceJNI.java  SWIGTYPE_p_std__vectorT_libjami__MediaMap_t.java  StringMap.java  SwarmMessage.java  VectMap.java
androidApp/src/main/kotlin/com/gettogether/app/: MainActivity.kt  (+1 more)
androidApp/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  splash_background.xml
androidApp/src/main/res/values/: colors.xml  strings.xml  themes.xml
composeApp/: build.gradle.kts
composeApp/src/androidMain/: AndroidManifest.xml
composeApp/src/androidMain/res/values/: strings.xml  themes.xml
doc/: AUDIO_INPUT_LIMITATION.md  BUG-PRESENCE-BROADCASTING.md  BUG-PRESENCE-DETECTION.md  CRITICAL-NATIVE-BUG.md  FLOW-OPTIMIZATION-SHAREDFLOW.md  ICE-multihoming-issue.md  IMPLEMENTATION_SUMMARY.md  OPEN_TASKS.md  PRESENCE-BROADCASTING-IMPLEMENTATION.md  PRESENCE-POLLING-SOLUTION.md  TEST-PEER-DISCOVERY-SETTINGS.md  TODO.md  WORKING_FEATURES.md  admin-install-list.md  audio-call-test-readiness.md  audio-input-crash-analysis-pixel7a.md  bridge-integration-tests-results.md  build-dependencies-report.md  call-crash-analysis.md  contact-flow-issues.md  contact-persistence-implementation.md  dual-emulator-test-report.md  final-diagnosis-and-next-steps.md  final-test-report-2025-12-20.md  isbanned-bug-fix-report.md  jami-daemon-ios-build-dependencies.md  jami-daemon-issues-investigation.md  kmp-voip-communication-app-best-practices.md  message-delivery-investigation.md  message-persistence-and-timestamp-fixes.md  message-ui-investigation.md  messaging-test-results.md  native-build-analysis.md  open-tasks-scan-2025-12-21.md  physical-device-test-results.md  plan-jni-integration.md  plan-open-tasks.md  presence-subscription-implementation.md  project-description-and-testing.md  test-report-2025-12-19.md  (+8 more)
gradle/: libs.versions.toml
iosApp/: ExportOptions.plist
iosApp/iosApp/: ContentView.swift  Info.plist  iOSApp.swift  iosApp.entitlements
iosApp/iosApp.xcodeproj/: project.pbxproj
iosApp/iosApp/CallKit/: CallKitManager.swift
iosApp/iosApp/JamiBridge/: JamiBridgeWrapper.h  JamiBridgeWrapper.mm  SwiftJamiBridgeAdapter.swift
iosApp/iosApp/PushKit/: PushKitManager.swift
script/: build-complete-x86_64.sh  build-libjami-ios.sh  build-libjami-x86_64-cmake.sh  build-libjami-x86_64.sh  build-libjami.sh  create-x86_64-toolchain-wrappers.sh  link-jni.sh  setup-jami-build-ios.sh  setup-jami-build-macos.sh  setup-jami-build.sh  setup-xcode-ios.rb  test-audio-input-workaround.kt  update_jamiId.sh
shared/: build.gradle.kts
shared/src/nativeInterop/cinterop/: JamiBridge.def
(+163 files in other folders)
